# dantalion

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  LICENSE  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: design.md  index.md
docs/adr/: 0001-provider-abstraction.md  0002-synchronous-core.md  0003-structured-output-ladder.md  0004-record-replay.md
examples/: incident.jsonl
src/dantalion/: __init__.py  config.py  errors.py  types.py
src/dantalion/agent/: __init__.py  budget.py  critic.py  loop.py  plan.py  result.py
src/dantalion/cli/: __init__.py  app.py  render.py
src/dantalion/domains/: __init__.py
src/dantalion/domains/anomaly/: __init__.py  data.py  investigator.py  report.py  stats.py  tools.py
src/dantalion/eval/: __init__.py  metrics.py  runner.py  scenarios.py
src/dantalion/memory/: __init__.py  compaction.py  window.py
src/dantalion/providers/: __init__.py  base.py  llama_cpp.py  mock.py  ollama.py  openai_compat.py  registry.py  tokens.py
src/dantalion/structured/: __init__.py  extract.py  gbnf.py  strategy.py
src/dantalion/tools/: __init__.py  base.py  decorator.py  registry.py
src/dantalion/trace/: __init__.py  cassette.py  meter.py  span.py
tests/: conftest.py  test_agent_advanced.py  test_agent_loop.py  test_anomaly_data.py  test_anomaly_investigator.py  test_anomaly_tools.py  test_budget.py  test_cli.py  test_config.py  test_eval.py  test_gbnf.py  test_llama_cpp.py  test_memory.py  test_mock_provider.py  test_ollama.py  test_openai_compat.py  test_registry.py  test_structured_extract.py  test_structured_strategy.py  test_tokens.py  test_tools.py  test_trace.py  test_types.py
