[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dantalion"
version = "0.1.0"
description = "A model-agnostic, local-first autonomous investigation agent."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Francois Petizon", email = "francois.petizon@kcl.ac.uk" }]
keywords = ["llm", "agent", "local", "ollama", "anomaly", "investigation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
llama-cpp = ["llama-cpp-python>=0.2.70"]
parquet = ["pyarrow>=15.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "mypy>=1.10",
    "ruff>=0.5",
    "pre-commit>=3.7",
]
docs = ["mkdocs-material>=9.5", "mkdocstrings[python]>=0.25"]

[project.urls]
Homepage = "https://github.com/francoispzn/dantalion"
Repository = "https://github.com/francoispzn/dantalion"
Documentation = "https://github.com/francoispzn/dantalion/tree/main/docs"

[project.scripts]
dantalion = "dantalion.cli.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/dantalion"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pyflakes / pycodestyle
    "I",             # isort
    "UP",            # pyupgrade
    "B",             # bugbear
    "C4",            # comprehensions
    "SIM",           # simplify
    "RUF",           # ruff-specific
    "PTH",           # use pathlib
    "TID",           # tidy imports
]
ignore = ["B008"]  # typer uses function calls in argument defaults

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_redundant_casts = true
no_implicit_reexport = true
plugins = ["pydantic.mypy"]
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["llama_cpp.*", "pyarrow.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --cov=dantalion --cov-report=term-missing"
markers = [
    "live: tests that require a running local model (skipped by default)",
]

[tool.coverage.run]
branch = true
source = ["dantalion"]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
    "\\.\\.\\.",
]
